--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-Flask==2.3.2
-python-dotenv==1.0.0
-gunicorn==21.2.0
-Flask-Cors==4.0.0
-gspread==6.0.0
-google-auth==2.29.0
-google-generativeai==0.7.0
+Flask
+flask-cors
+google-generativeai
 
